MRC-187 Remove whitespace nowrap. was causing issues with scrollable table.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
 }
 
 .app-table .govuk-table__cell {
-   white-space: nowrap;
+   /*white-space: nowrap;*/
 }
 
 .govuk-back-link {
